add & config dependencies