@@ -2,7 +2,9 @@ package com.lab.config;
 
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
@@ -10,40 +12,51 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
-    @Value("${server.port}")
+
+    @Value("${server.port:8080}") // Thêm giá trị mặc định 8080 nếu không tìm thấy port
     private String serverPort;
+
     @Bean
     public OpenAPI customOpenAPI() {
-        // Define servers
+        // 1. Cấu hình danh sách Server
         Server localServer = new Server()
                 .url("http://localhost:" + serverPort)
-                .description("Local Server");
+                .description("Local Development Server");
+
         Server devServer = new Server()
-                .url("https://dev.api.your-dev-domain.com")
-                .description("Development Server");
-        Server prodServer = new Server()
-                .url("https://api.your-prod-domain.com")
-                .description("Production Server");
-        // Define security scheme (JWT Bearer token or access-token)
+                .url("https://dev-api.lab.com")
+                .description("Dev Environment");
+
+        // 2. Cấu hình Security Scheme (JWT)
+        final String securitySchemeName = "bearerAuth";
         SecurityScheme bearerAuthScheme = new SecurityScheme()
+                .name(securitySchemeName)
                 .type(SecurityScheme.Type.HTTP)
                 .scheme("bearer")
-                .bearerFormat("JWT") // Or custom format if needed
-                .in(SecurityScheme.In.HEADER)
-                .name("Authorization"); // If you use access-token, change this to "access-token"
-        SecurityRequirement securityRequirement = new SecurityRequirement()
-                .addList("bearerAuth");
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER);
+
+        // 3. Xây dựng OpenAPI object
         return new OpenAPI()
                 .info(new Info()
-                        .title("JavaLab API")
-                        .description("API documentation for JavaLab system")
-                        .version("1.0.0"))
-                .servers(Arrays.asList(localServer, devServer, prodServer))
-         .components(new Components().addSecuritySchemes("bearerAuth", bearerAuthScheme))
-         .addSecurityItem(securityRequirement); // Apply to all APIs by default
+                        .title("JavaLab Project API")
+                        .description("Hệ thống Lab học tập Java 21 & Spring Boot 3.x\n\n" +
+                                "Các module hiện có: Binance, Concurrency, Lock, Lambda.")
+                        .version("v1.0.0")
+                        .contact(new Contact()
+                                .name("Neko Developer")
+                                .email("admin@lab.com"))
+                        .license(new License().name("Apache 2.0").url("http://springdoc.org")))
+                .servers(List.of(localServer, devServer))
+                .addSecurityItem(new SecurityRequirement().addList(securitySchemeName))
+                .components(
+                        new Components()
+                        .addSecuritySchemes(securitySchemeName, bearerAuthScheme)
+                );
     }
 }
 
